[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/logo/logo_01_completo.png" type="Texture" id=1]
[ext_resource path="res://assets/backgrounds/background.png" type="Texture" id=2]
[ext_resource path="res://assets/elements/portrait.png" type="Texture" id=3]
[ext_resource path="res://assets/elements/persiana i.png" type="Texture" id=4]
[ext_resource path="res://assets/backgrounds/base.png" type="Texture" id=5]
[ext_resource path="res://assets/elements/desk.png" type="Texture" id=6]
[ext_resource path="res://assets/elements/windows.png" type="Texture" id=7]
[ext_resource path="res://assets/elements/animations/g4_tv.png" type="Texture" id=8]
[ext_resource path="res://assets/elements/silla.png" type="Texture" id=9]
[ext_resource path="res://assets/elements/boxes.png" type="Texture" id=10]
[ext_resource path="res://assets/elements/velador.png" type="Texture" id=11]
[ext_resource path="res://assets/elements/newspaper.png" type="Texture" id=12]
[ext_resource path="res://assets/font/tiny_font.tres" type="DynamicFont" id=13]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=14]
[ext_resource path="res://assets/music/(Dubitativo song) Opennin pantalla principal.ogg" type="AudioStream" id=15]

[node name="Menu" type="Node2D"]
script = ExtResource( 14 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="base" type="Sprite" parent="background"]
position = Vector2( 161.044, 169.296 )
texture = ExtResource( 5 )

[node name="newspaper" type="Sprite" parent="background"]
position = Vector2( 37.6699, 32.0646 )
texture = ExtResource( 12 )

[node name="desk" type="Sprite" parent="background"]
position = Vector2( 108.191, 145.696 )
texture = ExtResource( 6 )

[node name="tv on" type="Sprite" parent="background"]
position = Vector2( 67.6602, 76.5331 )
texture = ExtResource( 8 )
hframes = 3

[node name="portrait" type="Sprite" parent="background"]
position = Vector2( 16.7727, 102.947 )
texture = ExtResource( 3 )

[node name="windows" type="Sprite" parent="background"]
position = Vector2( 224.601, 49.0164 )
texture = ExtResource( 7 )

[node name="persiana i" type="Sprite" parent="background"]
position = Vector2( 181.771, 20.6821 )
texture = ExtResource( 4 )

[node name="persiana i2" type="Sprite" parent="background"]
position = Vector2( 181.771, 61.1162 )
texture = ExtResource( 4 )

[node name="persiana i3" type="Sprite" parent="background"]
position = Vector2( 269.201, 20.6821 )
texture = ExtResource( 4 )

[node name="persiana i4" type="Sprite" parent="background"]
position = Vector2( 269.201, 61.1162 )
texture = ExtResource( 4 )

[node name="velador" type="Sprite" parent="background"]
position = Vector2( 285.349, 145.821 )
texture = ExtResource( 11 )

[node name="boxes" type="Sprite" parent="background"]
position = Vector2( 42.1167, 165.884 )
texture = ExtResource( 10 )

[node name="silla" type="Sprite" parent="background"]
position = Vector2( 102.614, 128.137 )
texture = ExtResource( 9 )

[node name="logo_01_completo" type="Sprite" parent="."]
position = Vector2( 212.942, 92.946 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 49.7416
margin_bottom = 55.7416
custom_fonts/font = ExtResource( 13 )
text = "- TOCA PARA COMENZAR -"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="RichTextLabel" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -15.0
margin_bottom = -4.99998
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[center][color=yellow]< EXPERIENCIA [wave]RECOMENDADA CON AUDÍFONOS[/wave] >[/color][/center]"
text = "< EXPERIENCIA RECOMENDADA CON AUDÍFONOS >"

[node name="IntroButton" type="TextureButton" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton" type="LinkButton" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -39.5561
margin_top = 5.0
margin_right = -7.55609
margin_bottom = 14.0
custom_fonts/font = ExtResource( 13 )
text = "CRÉDITOS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditosPopup" type="Popup" parent="Control"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="ColorRect" parent="Control/CreditosPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.215686, 0.0235294, 0.32549, 0.941176 )

[node name="CloseButton" type="LinkButton" parent="Control/CreditosPopup"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -39.5561
margin_top = 5.0
margin_right = -15.5561
margin_bottom = 14.0
custom_fonts/font = ExtResource( 13 )
text = "CERRAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/CreditosPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 19.3073
margin_bottom = -0.692673
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]
[wave][color=red]PROGRAMACIÓN[/color][/wave]

FEDERICO ALVAREZ [color=yellow](@FEFOALVAREZ)[/color]

[wave][color=red]ARTE / DISEÑO[/color][/wave]

[color=yellow]@RAVEN[/color]

GEOVANNY GAVILANES
[color=yellow]HTTP://VANGALTHER.ITCH.IO[/color]

[wave][color=red]MÚSICA / SONIDOS[/color][/wave]

[color=yellow]@JJ23[/color]

[wave][color=red]NARRATIVA[/color][/wave]

[color=yellow]JONATHAN VILLAMAR[/color]
[/center]"
text = "
PROGRAMACIÓN

FEDERICO ALVAREZ (@FEFOALVAREZ)

ARTE / DISEÑO

@RAVEN

GEOVANNY GAVILANES
HTTP://VANGALTHER.ITCH.IO

MÚSICA / SONIDOS

@JJ23

NARRATIVA

JONATHAN VILLAMAR
"

[node name="Transition" type="ColorRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.109804, 0.0156863, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionTween" type="Tween" parent="Control"]

[node name="AudioTween" type="Tween" parent="Control"]

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
autoplay = true
[connection signal="pressed" from="Control/IntroButton" to="." method="_on_IntroButton_pressed"]
[connection signal="pressed" from="Control/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="Control/CreditosPopup/CloseButton" to="." method="_on_CloseButton_pressed"]
